feature(Tag-Me-DAW2/sprints#22): finished all testing with category and product